# R-Type

./: .gitmodules  CMakeLists.txt  README.md  build.bat  rfc1210.txt
.github/workflows/: cmake-multi-platform.yml
LevelFolder/: Level1.txt  Menu.txt
documentation/: Doxygen
src/Client/: Client.cpp  Client.hpp  main.cpp
src/Client/ECS/Components/: BonusComponent.hpp  BulletComponent.hpp  ClickableComponent.hpp  EnemyComponent.hpp  HealthComponent.hpp  HpBarComponent.hpp  InvincibleComponent.hpp  InvisibleComponent.hpp  LayerComponent.hpp  OrientationComponent.hpp  PatternComponent.hpp  PlayableComponent.hpp  PositionComponent.hpp  PowerComponent.hpp  ScaleComponent.hpp  SizeComponent.hpp  SoundsComponent.hpp  SpeedComponent.hpp  SpriteComponent.hpp  SpriteOnComponent.hpp  WeaponComponent.hpp  isBackground.hpp
src/Client/ECS/Entities/: Entity.hpp
src/Client/ECS/Systems/: BackgroundSystem.cpp  BackgroundSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  PlayableSystem.cpp  PlayableSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  UpdateSystem.cpp  UpdateSystem.hpp
src/Client/Game/: Game.cpp  Game.hpp
src/Client/Levels/: Level.cpp  Level.hpp
src/Client/Registry/: Registry.cpp  Registry.hpp
src/Server/: Server.cpp  Server.hpp  main.cpp
